# sudoku-ar-overlay

./: .env.example  .gitignore  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  sudoku-ar-overlay-roadmap-contract.md
.github/workflows/: python-smoke.yml
assets/debug/: last_solve_response.json  probe_solver_direct.json
assets/demo/: test_image.HEIC
docs/: ROADMAP_CONTRACT.md  arkit_live_iphone_product_contract.md  metrics.md  project_status.md  sudoku_ar_overlay_status_update_2026-04-28.md
docs/code_backups/: ContentView_bad_hybrid_before_restore_20260429_101042.swift  ContentView_bad_inset_before_restore_20260428_203336.swift  ContentView_bad_persistent_overlay_before_restore_20260429_095302.swift  ContentView_before_corner_capture_guide_20260428_200502.swift  ContentView_before_dynamic_image_anchor_experiment_20260429_093501.swift  ContentView_before_fast_capturedImage_reset_20260428_191717.swift  ContentView_before_flat_digit_planes_20260428_164258.swift  ContentView_before_fullscreen_tap_catcher_20260428_163641.swift  ContentView_before_larger_image_anchor_reference_crop_20260429_095841.swift  ContentView_before_locked_tap_geometry_20260428_170228.swift  ContentView_before_numbers_only_20260428_162011.txt  ContentView_before_smaller_corner_guide_20260428_201212.swift  (+10 more)
docs/metrics/: prototype_metrics_summary.md
scripts/: debug_grid_refinement.py  debug_reacquisition_stability.py  debug_second_puzzle_candidates.py  debug_second_puzzle_segmentation.py  run_webcam_tracking.sh  static_real_overlay_from_solver.py  webcam_flow_tracking_demo.py
(+40 files in other folders)
