[project]
name = "sudoku-ar-overlay"
version = "0.1.0"
description = "Real-time planar AR overlay for Sudoku solving."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
